# mcp-server-freesearch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: test_search_use.md
mcp_server_freesearch/: __init__.py  server.py
