[project]
name = "mcp-server-freesearch"
version = "0.1.1"
description = "基于 SearXNG 的免费搜索 MCP 服务器"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jiecheng Yang", email = "yangjiecheng1995@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]
keywords = ["mcp", "search", "searxng", "web-search", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/wzj177/mcp-server-freesearch"
Repository = "https://github.com/wzj177/mcp-server-freesearch"
Issues = "https://github.com/wzj177/mcp-server-freesearch/issues"

[project.scripts]
mcp-server-freesearch = "mcp_server_freesearch:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server_freesearch"]
exclude = ["logs"]
